Add more VE200 modding examples

--- a/_posts/2021-8-31-VE-200.md
+++ b/_posts/2021-8-31-VE-200.md
@@ -460,6 +460,34 @@ health_period = 240
 
 Ещё один способ снизить нагрузку на разъём — приобрести угловой переходник с Mini USB на Mini USB и пропустить кабель внутри чехла. Автор этих строк успешно использует угловой переходник с Mini USB на Micro USB и кабель Micro USB соответственно (следует помнить, что на старых системниках и ноутбуках диску может не хватать питания от одного USB-порта и понадобится Y-образный кабель).
 
+## Замена разъёма Mini USB на USB Type-C
+
+### Вариант 1
+Использовался микромодуль в виде разъёма USB-C на маленькой платке, где с другой стороны 4 контакта: Vcc, D+, D-, Gnd.
+
+![Вид снаружи]({{ site.baseurl }}/images/posts/2021-8-31/659a6a.jpg)
+
+![Вид изнутри]({{ site.baseurl }}/images/posts/2021-8-31/fe12f6.jpg)
+
+![Разъём]({{ site.baseurl }}/images/posts/2021-8-31/H97ec842596934ddcb0769b5561e731308.jpg)
+
+[Источник](https://mysku.club/blog/aliexpress/85528.html#comment3824218)
+
+### Вариант 2
+Надфиль, выводы конденсаторов, платка с AliExpress, клей Kafuter AB.
+
+![Вид снаружи]({{ site.baseurl }}/images/posts/2021-8-31/1677091905902.jpg)
+
+![Вид изнутри]({{ site.baseurl }}/images/posts/2021-8-31/1677091905913.jpg)
+
+![Разъём изнутри 1]({{ site.baseurl }}/images/posts/2021-8-31/1677091905934.jpg)
+
+![Разъём изнутри 2]({{ site.baseurl }}/images/posts/2021-8-31/1677091905943.jpg)
+
+![Внутренняя часть крышки]({{ site.baseurl }}/images/posts/2021-8-31/1677091905924.jpg)
+
+[Источник](https://mysku.club/blog/usa-stores/93748.html#comment4235681)
+
 ## Замена колёсика
 JOG-DIAL подходит от копеечных китайских USB-медиаплееров (те, которые с батарейкой и радио). Ещё можно покопаться в коммуникаторах-динозаврах, вроде ASUS 527, и первых смартфонах от Sony. На eBay/AliExpress колёсики ищутся по запросу `SLLB510100`, а рычажок защиты от записи — `SPDT Switch 7` ([размеры]({{ site.baseurl }}/images/posts/2021-8-31/1285229578118_hz-myalibaba-web2_5142.png)).
 
