Update mail.ru 2FA instruction

--- a/_posts/2023-8-19-Mail.ru-2FA.md
+++ b/_posts/2023-8-19-Mail.ru-2FA.md
@@ -4,7 +4,7 @@ date: 2023-8-19
 categories: [mail.ru, 2fa]
 ---
 
-Некоторое время назад mail.ru поменяла интерфейс настроек. При этом убрали возможность включить двухфакторную авторизацию с помощью мобильного приложения, генерирующего одноразовые коды, оставив получение кодов лишь через СМС (упоминание приложения, как одного из вариантов получения кодов, [осталось](https://help.mail.ru/id/login/way/2fa) в документации).
+Некоторое время назад mail.ru поменяла интерфейс настроек. При этом убрали возможность включить двухфакторную авторизацию с помощью мобильного приложения, генерирующего одноразовые коды, оставив получение кодов лишь через СМС.
 
 Однако попасть в старый интерфейс настройки двухфакторной авторизации всё ещё можно. Для этого нужно вручную перейти по ссылке:
 
